--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ language: python
 before_script:
   - pip install -r requirements.txt
 script:
+  - PYTHONPATH=src/ mkdocs build -v --clean
+after_success:
   - openssl aes-256-cbc -K $encrypted_d7e5bf3dfc23_key -iv $encrypted_d7e5bf3dfc23_iv -in deploy-key.enc -out deploy-key -d
   - chmod 600 deploy-key
   - eval `ssh-agent -s`
@@ -16,3 +18,6 @@ script:
   - git remote add gh-token "${GH_REF}";
   - git fetch gh-token && git fetch gh-token gh-pages:gh-pages;
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then echo "Pushing to github"; PYTHONPATH=src/ mkdocs gh-deploy -v --clean --remote-name gh-token; git push gh-token gh-pages; fi;
+  on:
+    branch: master
+    
