--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ after_success:
   - git fetch gh-token && git fetch gh-token gh-pages:gh-pages;
   - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then echo "Pushing to github"; PYTHONPATH=src/ mkdocs gh-deploy -v --clean --remote-name gh-token; git push gh-token gh-pages; fi;
   on:
-    branch: master
+    - branch: master
     
