--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,19 @@ before_script:
 script:
   - PYTHONPATH=src/ mkdocs build -v --clean
 after_success:
-  - openssl aes-256-cbc -K $encrypted_d7e5bf3dfc23_key -iv $encrypted_d7e5bf3dfc23_iv -in deploy-key.enc -out deploy-key -d
-  - chmod 600 deploy-key
-  - eval `ssh-agent -s`
-  - ssh-add deploy-key
-  - git config user.name "Automatic Publish"
-  - git config user.email "djw8605@gmail.com"
-  - git remote add gh-token "${GH_REF}";
-  - git fetch gh-token && git fetch gh-token gh-pages:gh-pages;
-  - if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then echo "Pushing to github"; PYTHONPATH=src/ mkdocs gh-deploy -v --clean --remote-name gh-token; git push gh-token gh-pages; fi;
-  on:
-    branch: master
-    
+  if ([ "$TRAVIS_BRANCH" == "master" ] || [ ! -z "$TRAVIS_TAG" ]) && 
+      [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+      - openssl aes-256-cbc -K $encrypted_d7e5bf3dfc23_key -iv $encrypted_d7e5bf3dfc23_iv -in deploy-key.enc -out deploy-key -d
+      - chmod 600 deploy-key
+      - eval `ssh-agent -s`
+      - ssh-add deploy-key
+      - git config user.name "Automatic Publish"
+      - git config user.email "bgcook@lbl.gov"
+      - git remote add gh-token "${GH_REF}";
+      - git fetch gh-token && git fetch gh-token gh-pages:gh-pages;
+      - PYTHONPATH=src/ mkdocs gh-deploy -v --clean --remote-name gh-token
+      - git push gh-token gh-pages
+      echo "This will deploy!"
+  else
+    echo "This will not deploy!"
+  fi
